testcases/valid_programs/5.ml
#逻辑运算符
(and (= 1 1) (= 2 2))

(or true false)