testcases/ill_formed/2.ml
# 参数个数/类型不匹配

(define true x)

(define (x true) (- 2 1))

(+ 1)

(- 2)

(* 2)

(/ 1)

(and true)

(and true true true)

(or false)

(or false false false)

(not)

(or)

(and)

(not true false)